# utf8-parser

./: CHANGELOG.md  Cargo.toml  LICENSE.MIT  README.md
.github/workflows/: markdown.yml  rust.yml
src/: error.rs  lib.rs
