[package]
name = "utf8-parser"
version = "0.0.4-dev"
description = "A one-byte-at-a-time UTF-8 parser"
categories = ["no-std::no-alloc"]
exclude = [".github"]
keywords = ["unicode", "utf-8"]
authors = ["Property404 <DontEmailMeOrMySonEverAgain@example.com>"]
repository = "https://github.com/Property404/utf8-parser"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.60"

[features]
default-feature = ["std"]
std = []
error_in_core = []

[dependencies]

[dev-dependencies]
rand = "0.8"
